
Thu Jun 3 14:39:17 CEST 2004 Paolo Molaro <lupus@ximian.com>

	* configure.in: libc setting for NetBSD (patch from recht@netbsd.org).

2004-06-01  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (bootstrap,faststrap,fasterstrap): Refactor.
	Fix 'faststrap' to be corlib-version-change-safe.
	(one-stage-strap,two-stage-strap,three-stage-strap): Remove.
	(monolite-bootstrap): Update.

2004-05-31  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: fixlets for windows.

2004-05-29  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: export CC instead of passing it to libgc/configure.

2004-05-28  Duncan Mak  <duncan@ximian.com>

	* runtime/Makefile.am: 
	* scripts/Makefile.am: Include mono-find-provides and
	mono-find-requires.
	
	* scripts/mono-find-provides.in:
	* scripts/mono-find-requires.in: New wrapper scripts.

2004-05-27  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Pass CC to libgc configure.

2004-05-27  Gert Driesen (drieseng@users.sourceforge.net)

	* monowiz.win32.nsi: normalized line-endings to unix (LF)

2004-05-27  Gert Driesen (drieseng@users.sourceforge.net)

	* monowiz.win32.nsi: do not include mono subdirectory in
	MonoConfigDir registry key, to match batch files

2004-05-26  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* data/DefaultWsdlHelpGenerator.aspx: fixed querystring attribute
	values. Now they are URlEncoded.

	* data/browscap.ini.gz: updated.

2004-05-26  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (mcs-do-basic-build): No need to set MCS here.
	* runtime/net_1_1/Makefile.am (gac_assemblies_list): Update to
	reflect new names for nunit.util and nunit.framework.  Add
	nunit.core.
	* runtime/net_2_0/Makefile.am (gac_assemblies_list): Likewise.

2004-05-25 Ben Maurer  <bmaurer@users.sourceforge.net>

	* config.h.in: remove

2004-05-25 18:30 CET Patrik Torstensson <totte@hiddenpeaks.com>

	* configure.in: Check for trunc instead of truncl (HAVE_TRUNC)
